修改 props頁的aria、增加所有左側欄最小高度、網站導覽更新結構

--- a/app/news.html
+++ b/app/news.html
@@ -10,7 +10,7 @@ current: news
 
 <div class="content container-fluid">
 	<section class="row">
-		<div class="col-md-3 bg-light">
+		<div class="col-md-3 min-h bg-light">
 			<div class="list-group mt-4 position-fixed" id="list-tab" role="tablist">
 				<a class="list-group-item list-group-item-action active" id="news-information-list" data-toggle="list"
 					href="#news-information" role="tab" aria-controls="油煙相關訊息" title="油煙相關訊息">油煙相關訊息</a>
