--- a/app/props-prevent.html
+++ b/app/props-prevent.html
@@ -7,7 +7,7 @@ current: props-prevent
 
 <div class="content container-fluid">
   <section class="row">
-    <div class="col-md-3 bg-light">
+    <div class="col-md-3 min-h bg-light">
       <div class="list-group mt-4 position-fixed" id="list-tab" role="tablist">
         <a class="list-group-item list-group-item-action active" id="props-countermeasure-list" data-toggle="list"
           href="#props-countermeasure" role="tab" aria-controls="烹飪者的防範對策" title="烹飪者的防範對策">烹飪者的防範對策</a>
@@ -36,7 +36,7 @@ current: props-prevent
       <div class="tab-content" id="nav-tabContent">
         <!-- 烹飪者的防範對策 -->
         <section class="tab-pane mb-5 fade show active" id="props-countermeasure" role="tabpanel"
-          aria-labelledby="list-home-list">
+          aria-labelledby="props-countermeasure-list">
           <h1 class="mt-5 mb-3 font-weight-normal">烹飪者的防範對策</h1>
           <p class="mb-4">
             建議烹飪者能依循以下預防措施，可降低烹飪者自身與用餐者受油煙污染的風險。
@@ -98,7 +98,7 @@ current: props-prevent
           </div>
         </section>
         <!-- 硬體設備防制技術 -->
-        <section class="tab-pane mb-5 fade" id="props-technology" role="tabpanel" aria-labelledby="list-profile-list">
+        <section class="tab-pane mb-5 fade" id="props-technology" role="tabpanel" aria-labelledby="props-technology-list">
           <h1 class="mt-5 mb-3 font-weight-normal">硬體設備防制技術</h1>
           <div class="equipment-img mx-auto">
             <img src="./assets/images/equipment.jpg" class="img-fluid" alt="硬體設備圖" />
