修改機器檢測內容

--- a/app/index.html
+++ b/app/index.html
@@ -39,14 +39,14 @@ current: index
   </section>
   <!-- 最新消息 -->
   <section class="mb-6">
-    <h2 class="mb-3">最新消息<img src="./assets/images/new.svg" width="35" class="ml-2"></h2>
+    <h2 class="mb-3">最新消息<img src="./assets/images/new.svg" alt="最新消息" width="35" class="ml-2"></h2>
     <ul class="row list-unstyled">
       <li class="col-md-4 mb-3 mb-md-0">
         <p><small>108-08-27</small></p>
         <h3 class="text-truncate h5">高雄市政府推動「示範觀光夜市」認證評核</h3>
         <p>高雄市政府在推動特色觀光、樂遊高雄之際，為建構優質夜市商圈形象並確保讓本市民眾及外縣市觀光客能玩得開心且消費得放心，今年首次...</p>
         <div class="d-flex justify-content-end">
-          <a href="./news-1080827.html" class="btn btn-accentLight text-accent" role="button" title="查看更多">查看更多</a>
+          <a href="news-1080827.html" class="btn btn-accentLight text-accent" role="button" title="查看更多">查看更多</a>
         </div>
       </li>
       <li class="col-md-4 mb-3 mb-md-0">
@@ -56,7 +56,7 @@ current: index
           高雄市一定規模餐飲業管理辦法施行至今已近一年，為確保業者更加了解管理辦法以期提升自主管理及維護效益，將提出目前較常發生未符合...
         </p>
         <div class="d-flex justify-content-end">
-          <a href="./news-1071112.html" class="btn btn-accentLight text-accent" role="button" title="查看更多">查看更多</a>
+          <a href="news-1071112.html" class="btn btn-accentLight text-accent" role="button" title="查看更多">查看更多</a>
         </div>
       </li>
       <li class="col-md-4">
@@ -64,14 +64,14 @@ current: index
         <h3 class="text-truncate h5">環保署預告列管餐飲業以降低空污排放 高雄市一年前即啟動年減 7.4 噸 PM2.5</h3>
         <p>環保署今 (107) 年 5 月 17 日預告「餐飲業空氣污染物防制設施管理辦法草案」，預計將於年底擴大列管全國餐飲業；環保局表示，高雄市...</p>
         <div class="d-flex justify-content-end">
-          <a href="./news-1070523.html" class="btn btn-accentLight text-accent" role="button" title="查看更多">查看更多</a>
+          <a href="news-1070523.html" class="btn btn-accentLight text-accent" role="button" title="查看更多">查看更多</a>
         </div>
       </li>
     </ul>
   </section>
   <!-- 宣導主旨 -->
   <section class="mb-6">
-    <h2 class="mb-3">宣導主旨<img src="./assets/images/appreciation.svg" width="35" class="ml-2"></h2>
+    <h2 class="mb-3">宣導主旨<img src="./assets/images/appreciation.svg" alt="宣導主旨" width="35" class="ml-2"></h2>
     <div class="row">
       <div class="col-md-4">
         <img
@@ -85,7 +85,7 @@ current: index
         </p>
         <p>因此特別規劃「高雄市餐飲業空氣污染改善技術服務網頁」，期盼透過網頁提供餐飲業者獲得最佳可行性建議，促使業者進行油煙廢氣污染改善工作，冀達污染物減量及空氣品質改善等具體目標。</p>
         <div class="d-flex justify-content-end">
-          <a href="./props.html" class="btn btn-accentLight text-accent btn-block btn-md-block" role="button"
+          <a href="props.html" class="btn btn-accentLight text-accent btn-block btn-md-block" role="button"
             title="查看更多">查看更多</a>
         </div>
       </div>
@@ -95,24 +95,24 @@ current: index
 
   <!-- 輔導案例 -->
   <section class="mb-6">
-    <h2 class="mb-3">輔導案例<img src="./assets/images/premium.svg" width="35" class="ml-2"></h2>
+    <h2 class="mb-3">輔導案例<img src="./assets/images/premium.svg" alt="輔導案例" width="35" class="ml-2"></h2>
     <!-- Swiper -->
     <div class="swiper-container">
       <div class="swiper-wrapper">
         <div class="swiper-slide">
           <div class="card py-3 d border border-accent">
-            <h5 class="card-title mb-0 text-center"><a href="./exam-10711021430.html" class="text-accent">毒家口味燒烤</a>
+            <h5 class="card-title mb-0 text-center"><a href="exam-10711021430.html" class="text-accent">毒家口味燒烤</a>
             </h5>
           </div>
         </div>
         <div class="swiper-slide">
           <div class="card py-3 border border-accent">
-            <h5 class="card-title mb-0 text-center"><a href="./exam-10711021300.html" class="text-accent">沈記食堂</a></h5>
+            <h5 class="card-title mb-0 text-center"><a href="exam-10711021300.html" class="text-accent">沈記食堂</a></h5>
           </div>
         </div>
         <div class="swiper-slide">
           <div class="card py-3 border border-accent">
-            <h5 class="card-title mb-0 text-center"><a href="./exam-10711021030.html" class="text-accent">碳佐麻里</a></h5>
+            <h5 class="card-title mb-0 text-center"><a href="exam-10711021030.html" class="text-accent">碳佐麻里</a></h5>
           </div>
         </div>
       </div>
