調整左側欄 position-fixed 問題

--- a/app/contact.html
+++ b/app/contact.html
@@ -9,7 +9,7 @@ current: contact
   <!-- 左側欄 -->
   <section class="row flex-column-reverse flex-md-row">
     <div class="col-md-3 min-h bg-light">
-      <div class="mt-4 position-fixed">
+      <div class="mt-4 ">
         <div class="mb-5">
           <div id="tabL">
             <a href="#" title="左方連結區" accesskey="L">:::</a>
