--- a/app/props-laws.html
+++ b/app/props-laws.html
@@ -8,7 +8,7 @@ current: props-laws
 <div class="content container-fluid">
   <section class="row">
     <div class="col-md-3 min-h bg-light">
-      <div class="list-group mt-4 position-fixed" id="list-tab" role="tablist">
+      <div class="list-group mt-4 " id="list-tab" role="tablist">
         <a class="list-group-item list-group-item-action active" id="props-airPollution-list" data-toggle="list"
           href="#props-airPollution" role="tab" aria-controls="空氣污染防制法" title="空氣污染防制法">空氣污染防制法</a>
         <a class="list-group-item list-group-item-action" id="props-airPollutionGuidelines-list" data-toggle="list"
